Fixed text wrapping in menu

--- a/appli_collection.css
+++ b/appli_collection.css
@@ -99,6 +99,7 @@ body {
     padding: 0.5rem 1rem;
     text-align: center;
     color: black;
+    white-space: nowrap;
 }
 
 #name {
