--- a/appli_styles.css
+++ b/appli_styles.css
@@ -116,6 +116,7 @@
     padding: 0.5rem 1rem;
     text-align: center;
     color: black;
+    white-space: nowrap;
 }
 
 #name {
