--- a/messages.css
+++ b/messages.css
@@ -58,6 +58,7 @@ body{
     padding: 0.5rem 1rem;
     text-align: center;
     color: black;
+    white-space: nowrap;
 }
 
 #name {
